--- a/app/src/main/res/layout/layout_food_item.xml
+++ b/app/src/main/res/layout/layout_food_item.xml
@@ -10,7 +10,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <ImageView
             android:id="@+id/img_food_image"
@@ -33,7 +34,8 @@
                 android:gravity="center_vertical"
                 android:orientation="vertical"
                 android:layout_width="0dp"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                >
 
                 <TextView
                     android:id="@+id/txt_food_name"
@@ -65,7 +67,6 @@
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
             android:weightSum="2"
-            android:background="@color/border_color"
             >
 
             <ImageView
