--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -43,7 +43,7 @@
         android:id="@+id/btnCart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_shopping_cart_black_24dp"
+        app:srcCompat="@drawable/ic_shopping_cart_black_24dp"
         app:backgroundTint="@android:color/white"
         app:elevation="6dp"
         app:layout_anchor="@id/app_bar_layout"
@@ -56,7 +56,7 @@
         android:id="@+id/btn_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_star_black_24dp"
+        app:srcCompat="@drawable/ic_star_black_24dp"
         app:backgroundTint="@android:color/white"
         app:elevation="6dp"
         app:layout_anchor="@id/app_bar_layout"
@@ -114,7 +114,7 @@
                             android:layout_weight="1"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/ic_attach_money_black_24dp"
+                            app:srcCompat="@drawable/ic_attach_money_black_24dp"
                             />
                         
                         <TextView
@@ -184,6 +184,83 @@
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                app:cardElevation="5dp"
+                app:cardUseCompatPadding="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="8dp">
+
+                    <TextView
+                        android:layout_width = "wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/brandon_medium"
+                        android:text="@string/size"
+                        android:textSize="22sp" />
+
+                    <RadioGroup
+                        android:id= "@+id/rdi_group_size"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="3"></RadioGroup>
+
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                app:cardElevation="5dp"
+                app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width = "wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/brandon_medium"
+                        android:text="@string/add_on"
+                        android:textSize="22sp" />
+
+                    <ImageView
+                        android:id="@+id/img_add_addon"
+                        android:layout_width = "30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginTop="4dp"
+                        app:srcCompat="@drawable/ic_add_box_black_24dp"
+                        android:tint="@color/colorAccent" />
+
+                </LinearLayout>
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/chip_group_user_selected_addon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
+            </LinearLayout>
+             </androidx.cardview.widget.CardView>
 
             <Button
                 android:id="@+id/btnShowComment"
