--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -18,17 +18,16 @@
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/edtPhone"
-            android:hint="Phone Number"
+            android:hint="Phone Number/Email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="0988123344"
             android:textColorHint="@android:color/white"
             android:textColor="@android:color/white"
             android:textSize="34sp"
-            android:inputType="phone"
+            android:inputType="text"
             app:met_baseColor="@android:color/white"
             app:met_floatingLabel="highlight"
-            app:met_maxCharacters="11"
             app:met_primaryColor="@android:color/white"
             app:met_singleLineEllipsis="true"
             />
@@ -45,7 +44,6 @@
             android:inputType="text"
             app:met_baseColor="@android:color/white"
             app:met_floatingLabel="highlight"
-            app:met_maxCharacters="11"
             app:met_primaryColor="@android:color/white"
             app:met_singleLineEllipsis="true"
             />
@@ -69,6 +67,23 @@
 
     </LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        >
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_up_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_margin="8dp"
+        />
+
     <Button
         android:id="@+id/btnSignUp"
         android:layout_width="match_parent"
@@ -81,14 +96,9 @@
         android:background="#2196F3"
         android:text="@string/sign_up"
         android:textColor="@android:color/white">
-        <!--            app:buttonColor="@color/btnSignActive"-->
-        <!--            app:shadowColor="@android:color/black"-->
-        <!--            app:shadowEnabled="true"-->
-        <!--            app:shadowHeight="5dp"-->
-        <!--            app:cornerRadius="4dp"-->
-
     </Button>
 
+    </LinearLayout>
 
 
 </RelativeLayout>
