Created cart Fragment inside navigation drawer

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -46,4 +46,10 @@
         android:name="com.example.androideatit.ui.fooddetail.FoodDetailFragment"
         android:label="@string/menu_food_detail"
         tools:layout="@layout/fragment_food_detail" />
+
+    <fragment
+        android:id="@+id/nav_cart"
+        android:name="com.example.androideatit.ui.cart.CartFragment"
+        android:label="@string/menu_cart"
+        tools:layout="@layout/fragment_cart" />
 </navigation>
