--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -13,8 +13,8 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_menu" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_cart"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_food_list" />
+            android:title="@string/menu_cart" />
     </group>
 </menu>
