--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -54,14 +54,16 @@
                 android:textSize="24sp"
                 />
 
-            <com.google.android.material.button.MaterialButton
+            <Button
                 android:id="@+id/btn_place_order"
-                android:text = "Place Order"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:background="#E91E63"
+                android:textColor="@android:color/white"
+                android:text="Place Order" />
 
 
-        </LinearLayout>|
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
