--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -16,5 +16,10 @@
             android:id="@+id/nav_cart"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_cart" />
+
+        <item
+            android:id="@+id/nav_view_orders"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_view_orders" />
     </group>
 </menu>
