Started work on View Orders

--- a/app/src/main/res/layout/layout_order_item.xml
+++ b/app/src/main/res/layout/layout_order_item.xml
@@ -25,7 +25,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txt_order_data"
+                android:id="@+id/txt_order_date"
                 android:text="Today at 13:05 pm"
                 android:fontFamily="@font/brandon_medium"
                 android:layout_marginStart="8dp"
