--- a/app/src/main/res/layout/layout_order_item.xml
+++ b/app/src/main/res/layout/layout_order_item.xml
@@ -15,6 +15,7 @@
 
         <ImageView
             android:id="@+id/img_order"
+            android:layout_gravity="center"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="fitXY" />
@@ -31,7 +32,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
@@ -43,7 +44,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:textSize="16sp"
+                android:textSize="12sp"
                 android:textColor="@android:color/holo_red_dark"
                 android:textStyle="italic"
                 android:layout_width="match_parent"
@@ -57,7 +58,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:textColor="@android:color/holo_red_dark"
                 android:textStyle="italic"
                 android:layout_width="match_parent"
@@ -71,7 +72,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:textColor="@android:color/holo_red_dark"
                 android:textStyle="italic"
                 android:layout_width="match_parent"
