--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -105,7 +105,7 @@
                     </TextView>
 
                     <LinearLayout
-                        android:id="@+id/layout_price"
+                        android:id="@+id/layout_price_total"
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -118,7 +118,7 @@
                             />
                         
                         <TextView
-                            android:id="@+id/food_price"
+                            android:id="@+id/food_price_total"
                             android:layout_weight="9"
                             android:textColor="@color/colorPrimary"
                             android:text="1,000"
@@ -154,21 +154,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                    <RatingBar
-                        android:id="@+id/ratingBar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        style="?android:attr/ratingBarStyleIndicator"
-                        android:numStars="5"
-                        android:stepSize="0.5"
-                        android:isIndicator="true"
-                        />
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_attach_money_black_24dp" />
 
+                <TextView
+                    android:id="@+id/food_price"
+                    android:layout_weight="9"
+                    android:textColor="@color/colorPrimary"
+                    android:text="1,000"
+                    android:fontFamily="@font/brandon_medium"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_price"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
                     <TextView
                         android:id="@+id/food_description"
                         android:layout_width="wrap_content"
@@ -183,6 +198,7 @@
                         />
 
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
