--- a/app/src/main/res/layout/layout_cart_item.xml
+++ b/app/src/main/res/layout/layout_cart_item.xml
@@ -23,26 +23,38 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            
+
+            <TextView
+                android:id="@+id/txt_food_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/brandon_medium"
+                android:text="Cart"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/txt_food_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/brandon_medium"
+                android:text="100.0"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="14sp"
+                android:textStyle="italic" />
+
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/txt_food_name"
-                    android:text="Cart"
-                    android:fontFamily="@font/brandon_medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:textSize="14sp"
-                    />
-
-                <TextView
-                    android:id="@+id/txt_food_price"
+                    android:id="@+id/txt_final_price"
                     android:text="100.0"
                     android:fontFamily="@font/brandon_medium"
                     android:layout_width="match_parent"
@@ -52,7 +64,7 @@
                     android:layout_marginEnd="8dp"
                     android:textSize="14sp"
                     android:textStyle="italic"
-                    android:textColor="@android:color/holo_red_dark"
+                    android:textColor="@color/colorAccent"
                     />
 
 
