--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -96,7 +96,7 @@
                         android:layout_marginTop="8dp"
                         android:padding="12dp"
                         android:text="Food Name"
-                        android:fontFamily="@font/brandon_medium"
+                        android:fontFamily="@font/CooperHewitt-Bold"
                         android:textColor="@color/colorPrimary"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -122,7 +122,7 @@
                             android:layout_weight="9"
                             android:textColor="@color/colorPrimary"
                             android:text="1,000"
-                            android:fontFamily="@font/brandon_medium"
+                            android:fontFamily="@font/CooperHewitt-Bold"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:textSize="18sp"
@@ -170,7 +170,7 @@
                     android:layout_weight="9"
                     android:textColor="@color/colorPrimary"
                     android:text="1,000"
-                    android:fontFamily="@font/brandon_medium"
+                    android:fontFamily="@font/CooperHewitt-Bold"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
@@ -192,7 +192,7 @@
                         android:lineSpacingMultiplier="1.5"
                         android:padding="12dp"
                         android:text="Description"
-                        android:fontFamily="@font/brandon_medium"
+                        android:fontFamily="@font/CooperHewitt-Bold"
                         android:textSize="14sp"
                         android:textColor="@android:color/black"
                         />
@@ -217,7 +217,7 @@
                     <TextView
                         android:layout_width = "wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/brandon_medium"
+                        android:fontFamily="@font/CooperHewitt-Bold"
                         android:text="@string/size"
                         android:textSize="22sp" />
 
@@ -253,7 +253,7 @@
                     <TextView
                         android:layout_width = "wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/brandon_medium"
+                        android:fontFamily="@font/CooperHewitt-Bold"
                         android:text="@string/add_on"
                         android:textSize="22sp" />
 
