--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
             >
             
             <TextView
-                android:fontFamily="@font/brandon_medium"
+                android:fontFamily="@font/CooperHewitt-Bold"
                 android:textSize="24sp"
                 android:text="@string/popular_categories"
                 android:textStyle="bold"
@@ -45,7 +45,7 @@
             <TextView
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="8dp"
-                android:fontFamily="@font/brandon_medium"
+                android:fontFamily="@font/CooperHewitt-Bold"
                 android:text="@string/best_deals"
                 android:textStyle="bold"
                 android:textSize="24sp"
