--- a/app/src/main/res/layout/layout_cart_item.xml
+++ b/app/src/main/res/layout/layout_cart_item.xml
@@ -31,7 +31,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:fontFamily="@font/brandon_medium"
+                android:fontFamily="@font/CooperHewitt-Bold"
                 android:text="Cart"
                 android:textSize="14sp" />
 
@@ -42,7 +42,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:fontFamily="@font/brandon_medium"
+                android:fontFamily="@font/CooperHewitt-Bold"
                 android:text="100.0"
                 android:textColor="@android:color/holo_red_dark"
                 android:textSize="14sp"
@@ -56,7 +56,7 @@
                 <TextView
                     android:id="@+id/txt_final_price"
                     android:text="100.0"
-                    android:fontFamily="@font/brandon_medium"
+                    android:fontFamily="@font/CooperHewitt-Bold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
