--- a/app/src/main/res/layout/layout_place_order.xml
+++ b/app/src/main/res/layout/layout_place_order.xml
@@ -8,14 +8,14 @@
     >
 
     <com.google.android.material.textfield.TextInputLayout
-        android:fontFamily="@font/brandon_medium"
+        android:fontFamily="@font/CooperHewitt-Bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/edt_address"
             android:hint="Enter your address"
-            android:fontFamily="@font/brandon_medium"
+            android:fontFamily="@font/CooperHewitt-Bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -25,7 +25,7 @@
         android:id="@+id/txt_address_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/brandon_medium"
+        android:fontFamily="@font/CooperHewitt-Bold"
         android:text="Your Address"
         android:visibility="gone"
         android:textSize="16sp"
@@ -33,14 +33,14 @@
         android:textColor="@android:color/black"/>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:fontFamily="@font/brandon_medium"
+        android:fontFamily="@font/CooperHewitt-Bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/edt_comment"
             android:hint="Enter your comment"
-            android:fontFamily="@font/brandon_medium"
+            android:fontFamily="@font/CooperHewitt-Bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -49,7 +49,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/brandon_medium"
+        android:fontFamily="@font/CooperHewitt-Bold"
         android:text="Delivery Method"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -64,7 +64,7 @@
             android:id="@+id/rdi_home_address"
             android:checked="true"
             android:text="Home Address"
-            android:fontFamily="@font/brandon_medium"
+            android:fontFamily="@font/CooperHewitt-Bold"
             android:textSize="18sp"
             android:textStyle="italic"
             android:textColor="@color/dialog_text_color"
@@ -76,7 +76,7 @@
             android:id="@+id/rdi_other_address"
             android:checked="true"
             android:text="Other Address"
-            android:fontFamily="@font/brandon_medium"
+            android:fontFamily="@font/CooperHewitt-Bold"
             android:textSize="18sp"
             android:textStyle="italic"
             android:textColor="@color/dialog_text_color"
@@ -87,7 +87,7 @@
             android:id="@+id/rdi_ship_this_address"
             android:checked="true"
             android:text="Ship to current address"
-            android:fontFamily="@font/brandon_medium"
+            android:fontFamily="@font/CooperHewitt-Bold"
             android:textSize="18sp"
             android:textStyle="italic"
             android:textColor="@color/dialog_text_color"
@@ -99,7 +99,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/brandon_medium"
+        android:fontFamily="@font/CooperHewitt-Bold"
         android:text="Payment Method"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -114,7 +114,7 @@
             android:id="@+id/rdi_cod"
             android:checked="true"
             android:text="Cash On Delivery"
-            android:fontFamily="@font/brandon_medium"
+            android:fontFamily="@font/CooperHewitt-Bold"
             android:textSize="18sp"
             android:textStyle="italic"
             android:textColor="@color/dialog_text_color"
