--- a/app/src/main/res/layout/layout_popular_categories_item.xml
+++ b/app/src/main/res/layout/layout_popular_categories_item.xml
@@ -17,7 +17,7 @@
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/brandon_medium"
+        android:fontFamily="@font/CooperHewitt-Bold"
         android:textSize="20sp"
         />
 
