--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,8 +8,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/img1"
     tools:context=".SignIn">
-
-
 
     <LinearLayout
         android:orientation="vertical"
@@ -24,7 +20,7 @@
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/edtPhone"
-            android:hint="@string/edit_text_hint1"
+            android:hint="Phone Number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
@@ -84,25 +80,25 @@
             android:layout_gravity="center_vertical|center_horizontal"
             />
 
-        <android.widget.Button
-            android:id="@+id/btnSignIn"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_margin="8dp"
-            android:layout_alignParentBottom="true"
-            android:background="#c75c41"
-            android:text="@string/sign_in"
-            android:textColor="@android:color/white">
-            <!--            app:buttonColor="@color/btnSignActive"-->
-            <!--            app:shadowColor="@android:color/black"-->
-            <!--            app:shadowEnabled="true"-->
-            <!--            app:shadowHeight="5dp"-->
-            <!--            app:cornerRadius="4dp"-->
+            <android.widget.Button
+                android:id="@+id/btnSignIn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:background="#5588cd"
+                android:text="@string/sign_in"
+                android:textColor="@android:color/white">
+                <!--            app:buttonColor="@color/btnSignActive"-->
+                <!--            app:shadowColor="@android:color/black"-->
+                <!--            app:shadowEnabled="true"-->
+                <!--            app:shadowHeight="5dp"-->
+                <!--            app:cornerRadius="4dp"-->
 
-        </android.widget.Button>
+            </android.widget.Button>
         </LinearLayout>
 
         <android.widget.Button
