--- a/app/src/main/res/layout/layout_category_item.xml
+++ b/app/src/main/res/layout/layout_category_item.xml
@@ -19,7 +19,7 @@
         android:id="@+id/txt_category"
         android:text="@string/popular_categories"
         android:gravity="center_horizontal|center_vertical"
-        android:fontFamily="@font/CooperHewitt-Bold"
+        android:fontFamily="@font/cooperhewitt_bold"
         android:textColor="@android:color/white"
         android:textSize="22sp"
         android:layout_gravity="center_vertical"
