--- a/app/src/main/res/layout/layout_food_item.xml
+++ b/app/src/main/res/layout/layout_food_item.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/txt_food_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/CooperHewitt-Bold"
+                    android:fontFamily="@font/cooperhewitt_bold"
                     android:text="Name of Food"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -51,7 +51,7 @@
                     android:id="@+id/txt_food_price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/CooperHewitt-Bold"
+                    android:fontFamily="@font/cooperhewitt_bold"
                     android:text="$0"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
