--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="img1"
+    android:background="@drawable/img1"
     tools:context=".SignUp">
 
     <LinearLayout
@@ -21,14 +21,14 @@
             android:hint="Phone Number/Email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="0988123344"
-            android:textColorHint="@android:color/white"
-            android:textColor="@android:color/white"
+            android:text=""
+            android:textColorHint="#fccbbf"
+            android:textColor="#fccbbf"
             android:textSize="34sp"
             android:inputType="text"
-            app:met_baseColor="@android:color/white"
+            app:met_baseColor="#fccbbf"
             app:met_floatingLabel="highlight"
-            app:met_primaryColor="@android:color/white"
+            app:met_primaryColor="#fccbbf"
             app:met_singleLineEllipsis="true"
             />
 
@@ -37,14 +37,14 @@
             android:hint="Name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Eddydn"
-            android:textColorHint="@android:color/white"
-            android:textColor="@android:color/white"
+            android:text=""
+            android:textColorHint="#fccbbf"
+            android:textColor="#fccbbf"
             android:textSize="34sp"
             android:inputType="text"
-            app:met_baseColor="@android:color/white"
+            app:met_baseColor="#fccbbf"
             app:met_floatingLabel="highlight"
-            app:met_primaryColor="@android:color/white"
+            app:met_primaryColor="#fccbbf"
             app:met_singleLineEllipsis="true"
             />
 
@@ -54,14 +54,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="1234"
-            android:textColorHint="@android:color/white"
-            android:textColor="@android:color/white"
+            android:textColorHint="#fccbbf"
+            android:textColor="#fccbbf"
             android:textSize="34sp"
             android:inputType="textPassword"
-            app:met_baseColor="@android:color/white"
+            app:met_baseColor="#fccbbf"
             app:met_floatingLabel="highlight"
             app:met_maxCharacters="11"
-            app:met_primaryColor="@android:color/white"
+            app:met_primaryColor="#fccbbf"
             app:met_singleLineEllipsis="true"
             />
 
@@ -84,19 +84,18 @@
         android:layout_margin="8dp"
         />
 
-    <Button
-        android:id="@+id/btnSignUp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_margin="8dp"
-        android:layout_alignParentBottom="true"
-        android:layout_weight="1"
-        android:background="#2196F3"
-        android:text="@string/sign_up"
-        android:textColor="@android:color/white">
-    </Button>
+        <android.widget.Button
+            android:id="@+id/btnSignUp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            android:background="#c75c41"
+            android:text="@string/sign_up"
+            android:textColor="#fccbbf"></android.widget.Button>
 
     </LinearLayout>
 
