--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -26,6 +26,7 @@
                 android:id="@+id/img_food"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="#c75c41"
                 android:contentDescription="@null"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax">
@@ -96,7 +97,7 @@
                         android:layout_marginTop="8dp"
                         android:padding="12dp"
                         android:text="Food Name"
-                        android:fontFamily="@font/CooperHewitt-Bold"
+                        android:fontFamily="@font/cooperhewitt_bold"
                         android:textColor="@color/colorPrimary"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -122,7 +123,7 @@
                             android:layout_weight="9"
                             android:textColor="@color/colorPrimary"
                             android:text="1,000"
-                            android:fontFamily="@font/CooperHewitt-Bold"
+                            android:fontFamily="@font/cooperhewitt_bold"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:textSize="18sp"
@@ -135,14 +136,13 @@
                         android:id="@+id/number_button"
                         android:layout_width="100dp"
                         android:layout_height="30dp"
-                        android:layout_marginBottom="18dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
-                        app:backGroundColor="@color/colorAccent"
+                        android:layout_marginBottom="18dp"
+                        app:backGroundColor="#c75c41"
                         app:finalNumber="20"
                         app:initialNumber="1"
-                        app:textSize="8sp"
-                        />
+                        app:textSize="8sp" />
                     
                 </LinearLayout>
 
@@ -170,7 +170,7 @@
                     android:layout_weight="9"
                     android:textColor="@color/colorPrimary"
                     android:text="1,000"
-                    android:fontFamily="@font/CooperHewitt-Bold"
+                    android:fontFamily="@font/cooperhewitt_bold"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
@@ -192,7 +192,7 @@
                         android:lineSpacingMultiplier="1.5"
                         android:padding="12dp"
                         android:text="Description"
-                        android:fontFamily="@font/CooperHewitt-Bold"
+                        android:fontFamily="@font/cooperhewitt_bold"
                         android:textSize="14sp"
                         android:textColor="@android:color/black"
                         />
@@ -217,7 +217,7 @@
                     <TextView
                         android:layout_width = "wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/CooperHewitt-Bold"
+                        android:fontFamily="@font/cooperhewitt_bold"
                         android:text="@string/size"
                         android:textSize="22sp" />
 
@@ -253,7 +253,7 @@
                     <TextView
                         android:layout_width = "wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/CooperHewitt-Bold"
+                        android:fontFamily="@font/cooperhewitt_bold"
                         android:text="@string/add_on"
                         android:textSize="22sp" />
 
@@ -280,7 +280,7 @@
             </LinearLayout>
              </androidx.cardview.widget.CardView>
 
-            <Button
+            <android.widget.Button
                 android:id="@+id/btnShowComment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
