--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -43,16 +44,16 @@
 
             <TextView
                 android:id="@+id/txt_total_price"
-                android:text="Total: 0,0"
-                android:fontFamily="@font/cooperhewitt_bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                android:fontFamily="@font/cooperhewitt_bold"
+                android:text="Total: 0,0"
                 android:textSize="24sp"
-                />
+                tools:layout_marginBottom="10dp" />
 
             <android.widget.Button
                 android:id="@+id/btn_place_order"
