Updated user sign up to include other fields and some minor changes in signIn, signUp

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,20 +11,34 @@
         android:orientation="vertical"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_centerInParent="true"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/edtPhone"
-            android:hint="Phone Number/Email"
+            android:hint="Phone Number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="0988123344"
             android:textColorHint="@android:color/white"
             android:textColor="@android:color/white"
-            android:textSize="34sp"
+            android:textSize="28sp"
+            android:inputType="phone"
+            app:met_baseColor="@android:color/white"
+            app:met_floatingLabel="highlight"
+            app:met_primaryColor="@android:color/white"
+            app:met_singleLineEllipsis="true"
+            />
+
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/edtEmail"
+            android:hint="Email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/white"
+            android:textSize="28sp"
             android:inputType="text"
             app:met_baseColor="@android:color/white"
             app:met_floatingLabel="highlight"
@@ -37,10 +51,9 @@
             android:hint="Name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Eddydn"
             android:textColorHint="@android:color/white"
             android:textColor="@android:color/white"
-            android:textSize="34sp"
+            android:textSize="28sp"
             android:inputType="text"
             app:met_baseColor="@android:color/white"
             app:met_floatingLabel="highlight"
@@ -53,14 +66,27 @@
             android:hint="Password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="1234"
             android:textColorHint="@android:color/white"
             android:textColor="@android:color/white"
-            android:textSize="34sp"
+            android:textSize="28sp"
             android:inputType="textPassword"
             app:met_baseColor="@android:color/white"
             app:met_floatingLabel="highlight"
-            app:met_maxCharacters="11"
+            app:met_primaryColor="@android:color/white"
+            app:met_singleLineEllipsis="true"
+            />
+
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/edtAddress"
+            android:hint="Address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/white"
+            android:textSize="28sp"
+            android:inputType="text"
+            app:met_baseColor="@android:color/white"
+            app:met_floatingLabel="highlight"
             app:met_primaryColor="@android:color/white"
             app:met_singleLineEllipsis="true"
             />
